--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+
+
+
 }
 
 /* COMMON */
@@ -14,6 +18,40 @@
 }
 ul {
     list-style: none;
+}
+img {
+    max-width: 100%;
+}
+.text-center {
+    display: flex;
+    align-items: center;
+    
+}
+.grey {
+    color: #A3A3A3;
+}
+.white {
+    color: white;
+}
+.pb {
+    padding-bottom: 30px;
+}
+.pb10 {
+    padding-bottom: 10px;
+}
+.pt {
+    padding-top: 20px;
+}
+.flex {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+.nav-list-bottom {
+    padding: 0 20px;
+}
+.hover:hover {
+    color: white;
 }
 /* BODY */
 
@@ -28,6 +66,44 @@ ul {
     width: 200px;
     background-color: #000000;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
+}
+.logo {
+    padding: 20px;
+    width: 90%;
+}
+.logo-s {
+    padding: 10px;
+    display: none;
+}
+.icon-list li {
+    display: flex;
+    color: #A3A3A3;
+    padding-bottom: 20px;
+    gap: 10px;
+}
+.icon-list {
+   
+    padding: 20px;
+}
+.icon-list li img {
+    width: 20%;
+}  
+.playlist {
+    padding: 10px 20px; 
+}
+.playlist i {
+    font-size:50px;
+
+}
+.installa img {
+    width: 10%;
+}
+.profilo img {
+    width: 10%;
 }
 /* "home-section" */
 
@@ -40,18 +116,44 @@ ul {
 /* top-home */
 .top-home {
     height: 100px;
-    background-color: #080B12;
+    background-color:rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: calc(100% - 200px);
+    text-align: right;
+    padding-top: 30px;
+    padding-right: 3px;
+    
 }
-
+.top-home a {
+    text-decoration: none;
+    color: white;
+    
+    border: 1px solid white;
+    padding: 10px 40px;
+    border-radius: 20px;
+    
+    
+}
 
 
 /* home-center */
 .home-center {
     height: calc(100% - 100px);
+    
 }
 
 .nav-center {
     display: flex;
+    gap: 10px;
+    padding-top: 120px;
+    justify-content: center;
+    padding-left: 100px;
+    font-size: small;
+    width: 80%;
+    
+
 }
 .music-list {
     display: flex;
