--- a/style.css
+++ b/style.css
@@ -16,43 +16,61 @@
     width: 100%;
     height: 100vh;
 }
+
+.container {
+    padding: 20px;
+}
+
 ul {
     list-style: none;
 }
+
 img {
     max-width: 100%;
 }
+
 .text-center {
     display: flex;
     align-items: center;
-    
+
 }
+
 .grey {
     color: #A3A3A3;
 }
+
 .white {
     color: white;
 }
+
 .pb {
     padding-bottom: 30px;
 }
+
 .pb10 {
     padding-bottom: 10px;
 }
+
 .pt {
     padding-top: 20px;
+}
+.pt10 {
+    padding-top: 10px;
 }
 .flex {
     display: flex;
     gap: 10px;
     align-items: center;
 }
+
 .nav-list-bottom {
     padding: 0 20px;
 }
+
 .hover:hover {
     color: white;
 }
+
 /* BODY */
 
 /* BIG-SECTION */
@@ -61,6 +79,7 @@ img {
     height: calc(100% - 100px);
     display: flex;
 }
+
 /* "nav-list" */
 .nav-list {
     width: 200px;
@@ -70,95 +89,134 @@ img {
     flex-direction: column;
     justify-content: space-between;
     overflow: auto;
+    
+    
 }
+
 .logo {
     padding: 20px;
     width: 90%;
 }
+
 .logo-s {
     padding: 10px;
     display: none;
 }
+
 .icon-list li {
     display: flex;
     color: #A3A3A3;
     padding-bottom: 20px;
     gap: 10px;
 }
+
 .icon-list {
-   
+    border-left: 3px solid #ADFF2F;
     padding: 20px;
 }
+
 .icon-list li img {
     width: 20%;
-}  
-.playlist {
-    padding: 10px 20px; 
 }
+
+.playlist {
+    padding: 10px 20px;
+}
+
 .playlist i {
-    font-size:50px;
+    font-size: 50px;
 
 }
+
 .installa img {
     width: 10%;
 }
+
 .profilo img {
     width: 10%;
 }
+
 /* "home-section" */
 
 .home-section {
     width: calc(100% - 200px);
     background-color: #141922;
     overflow: auto;
-    
+
 }
+
 /* top-home */
 .top-home {
     height: 100px;
-    background-color:rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
     right: 0;
     width: calc(100% - 200px);
     text-align: right;
     padding-top: 30px;
-    padding-right: 3px;
-    
+    padding-right: 10px;
+
 }
+
 .top-home a {
     text-decoration: none;
     color: white;
-    
+
     border: 1px solid white;
     padding: 10px 40px;
     border-radius: 20px;
-    
-    
+
+
+}
+.upgrade-top:hover {
+    transform: scale( 1.02 );
 }
 
 
 /* home-center */
 .home-center {
     height: calc(100% - 100px);
-    
+    margin-top: 110px;
 }
 
 .nav-center {
     display: flex;
     gap: 10px;
-    padding-top: 120px;
+
     justify-content: center;
     padding-left: 100px;
-    font-size: small;
+    font-size: x-small;
     width: 80%;
-    
+    flex-wrap: wrap;
 
+}
+.green {
+    border: 1px solid #ADFF2F;
+    width: 30px;
+    text-align: center;
+    margin-left: 280px;
+}
+.recently-center {
+    margin-top: 20px;
 }
 .music-list {
     display: flex;
+
+    width: 100%;
+    margin: 20px 0;
+    text-align: center;
+    gap: 20px;
+     flex-wrap: wrap; 
+
 }
 
+.music-card {
+    width: calc(90% / 6);
+}
+.artisti-card img {
+    border-radius: 50%;
+}
 
 
 /* SECTION-INTERATTIVA */
