--- a/responsive.css
+++ b/responsive.css
@@ -1,47 +1,76 @@
 /* tablet */
-@media screen and (max-width: 1024px){
-.music-card {
-    width: calc(90% / 4);
+@media screen and (max-width: 878px) {
+    .music-card {
+        width: calc(90% / 4);
+    }
+
+    .now-listen {
+        width: 30%;
+    }
+
+    .action-now {
+        width: 30%;
+
+    }
+
+    .audio-player {
+        width: 30%;
+    }
 }
-}
+
 /* mobile l */
-@media screen and (max-width: 768px){
+@media screen and (max-width: 639px) {
     .music-card {
         width: calc(90% / 2);
     }
-} 
+
+
+}
+
 /* mobile m */
-@media screen and (max-width: 425px){
-.nav-list {
-    width: 80px;
+@media screen and (max-width: 552px) {
+    .nav-list {
+        width: 80px;
 
-}
-.home-section {
-    width: calc(100% - 80px);
-}
+    }
 
-.top-home {
-    width: calc(100% - 80px);
+    .home-section {
+        width: calc(100% - 80px);
+    }
+
+    .top-home {
+        width: calc(100% - 80px);
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .logo-s {
+        display: flex;
+    }
+
+    .text-center {
+        display: none;
+    }
+
+    .icon-list li img {
+        width: 100%;
+    }
+
+    .playlist {
+        display: none;
+    }
+
+    .none {
+        display: none;
+    }
+
+    .nav-list-bottom img {
+        width: 70%;
+    }
+
+    .music-card {
+        width: calc(90%/ 2);
+    }
 }
-.logo {
-    display: none;
-}
-.logo-s {
-    display: flex;
-}
-.text-center {
-    display: none;
-}
-.icon-list li img {
-    width: 100%;
-}  
-.playlist {
-    display: none;
-}
-.nav-list-bottom {
-    display: none;
-}
-.music-card {
-    width: calc(90%/ 2);
-}
-} 
